Tue Apr 03 04:37:02 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/positioniterator.h,include/xapian/postingiterator.h:
	  Fix mangled comment start in (C) headers.

Tue Apr 03 03:27:12 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/,generate-exceptions.in: Mark the following
	  constructors 'explicit': DocIDWrapper(docid), TermPosWrapper(const
	  std::string &), Query::Internal(const std::string &), Database(const
	  std::string &), all Error subclass constructors taking const
	  std::string &.  Only the Database and Error subclass changes should
	  be able to affect user code at all.
	* include/xapian/,api/omenquire.cc: Make the following methods
	  'const': RSet::contains(MSetIterator), Enquire::get_query().  This
	  shouldn't affect the validity of any user code.

Mon Apr 02 11:44:26 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* HACKING: Add note on "Building from SVN on Windows with MSVC"

Mon Apr 02 11:32:51 BST 2007  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc: Fix assertion to allow for OP_VALUE_RANGE.

Mon Apr 02 11:14:10 BST 2007  Olly Betts <olly@survex.com>

	* autoconf/rjb_find_stlport.m4: Fix check that the user didn't say
	  `./configure --with-stlport-compiler' (without `=gcc' or similar
	  after it).

Mon Apr 02 10:38:35 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_db.cc,tests/apitest.cc: Under __WIN32__ disable tests 
	  which require the prog variant of the remote backend.

Mon Apr 02 09:44:13 BST 2007  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Don't use SO_REUSEADDR under __CYGWIN__ or
	  __WIN32__ as it has incorrect semantics.

Mon Apr 02 09:37:14 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc: Pull `1239' out as `DEFAULT_PORT'.
	  On Windows, cycle through 10 ports starting at DEFAULT_PORT so that
	  we can have multiple databases open at once.  Add a monotonic count
	  to the name of the log file created from the output of each